[package]
name = "mabot"
version = "0.2.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12.2", features = ["macros", "auto-send"] }
log = "0.4"
pretty_env_logger = "0.5.0"
tokio = { version = "1.17.0", features = [
    "rt-multi-thread",
    "macros",
    "process",
    "signal",
] }
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.9.11"
serde_json = "1.0"
reqwest = "0.11"
indoc = "2.0.1"
formatx = "0.2.1"
